examples/good/17-02-lambda.dog
Fun<int(int)> f = [] (int c): int { return 5; };
yeet (f(5));