examples/bad/13-01-redeclaration.dog
int fun(boolean f) {
    int f;
    return 5;
}